--- a/TODO
+++ b/TODO
@@ -1,73 +1,5 @@
-Make choose sets page
-	Ability to randomize all sets
-	Make not totally ugly
-Render simple menu with buttons (setup, choose sets, score). Only choose sets works at the moment
-Make sets randomizable in bulk
-Make sets randomizable individually
-
-Plan:
-
-Game setup
-	Player Database
-		Add new players; text field, one per line
-		Delete added players
-		Select any number of players for game
-	Game players
-		Drag/drop to reorder
-		Randomize seating order
-		Select characters
-		Randomize characters (all/individual)
-		Select starting deck
-		Randomize starting deck (all/individual)
-	Reset scores
-	Reset players
-Randomizer
-	Sets
-		Select which sets you want; hierarchical checkboxes
-		Add custom sets
-		Delete custom sets (can also be disabled as normal)
-	Sets can be selected, randomized individually, locked (for global randomization), or have everything randomized
-	Save presets
 Score tracker
-	Enter collection size, victory points tallied automatically
-	Enter rank points, victory points tallied automatically
+Remember selected sets across page views
+Save/load presets
+Lock options to prevent them from being changed
 Timer
-	Custom
-
-Scoring
-	Collection bonuses
-		2: 2
-		3: 4
-		4: 7
-		5: 9
-		6: 12
-		7: 16
-		8+: 21
-	Tournament scores
-		Pre-release
-			1st: 7
-			2nd: 5
-			3rd: 4
-			4th: 3
-			5th: 2
-		Round 1
-			1st: 21
-			2nd: 15
-			3rd: 12
-			4th: 9
-			5th: 6
-		Round 2
-			1st: 28
-			2nd: 20
-			3rd: 16
-			4th: 12
-			5th: 8
-		Final Round
-			1st: 42
-			2nd: 30
-			3rd: 24
-			4th: 18
-			5th: 12
-	Friendship cards
-	Money
-		1vp per $4, rounded down
