--- a/TODO
+++ b/TODO
@@ -3,3 +3,5 @@ Remember selected sets across page views
 Save/load presets
 Lock options to prevent them from being changed
 Timer
+Add bookmark icon for mobile
+Make available offline
