--- a/TODO
+++ b/TODO
@@ -1,7 +1,12 @@
-Score tracker
-Remember selected sets across page views
-Save/load presets
+CURRENT
+
+Replace product chooser buttons with images
+Make IDs for items that don't depend on their names so that it doesn't screw up saving if I change name
+Use correct minified version of react
+	"Warning: It looks like you're using a minified copy of the development build of React. When deploying React apps to production, make sure to use the production build which skips development warnings and is faster. See https://fb.me/react-minification for more details."
+
+FUTURE
+
 Lock options to prevent them from being changed
 Timer
 Add bookmark icon for mobile
-Make available offline
