Presets support and fixing manifest

--- a/TODO
+++ b/TODO
@@ -8,3 +8,7 @@ FUTURE
 Lock options to prevent them from being changed
 Timer
 Add bookmark icon for mobile
+Toggle for pre-release/round 3
+Keep names visible when scrolling on score page
+Export?
+2-player scoring
